[package]
edition = "2018"
name = "rasterization-example"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
png = "0.17.5"

[build-dependencies]
spirv-builder = {git = "https://github.com/EmbarkStudios/rust-gpu"}

# Compile build-dependencies in release mode with
# the same settings as regular dependencies.
[profile.release.build-override]
codegen-units = 16
opt-level = 3
[profile.dev.build-override]
opt-level = 3
